syntax = "proto3";

package order;
option go_package = "/order";

import "google/protobuf/timestamp.proto";

// Order Service
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc AssignDriver(AssignDriverRequest) returns (AssignDriverResponse);
  rpc GetOrderDetails(GetOrderDetailsRequest) returns (GetOrderDetailsResponse);
  rpc GetOrdersByUser(GetOrdersByUserRequest) returns (GetOrdersByUserResponse);
  rpc CompleteDelivery(CompleteDeliveryRequest) returns (CompleteDeliveryResponse);
  rpc GetDeliveries(GetDeliveriesByUserRequest) returns (GetDeliveriesByUserResponse);
  rpc GetOrderItemInfo(GetOrderItemInfoRequest) returns (GetOrderItemInfoResponse);
  rpc CheckOrderStatus(CheckOrderStatusRequest) returns (CheckOrderStatusResponse);
}

// Messages
message CreateOrderRequest {
  int64 user_id = 1;
  string delivery_address = 2;
  repeated OrderItem items = 3;
  int64 time = 4;
}

message CheckOrderStatusRequest {
  int64 user_id = 1;
  int64 order_id = 2;
}

message CheckOrderStatusResponse {
  string status = 1;
}

message CreateOrderResponse {
  Order order = 1;
  string message = 2;
}

message UpdateOrderStatusRequest {
  int64 user_id = 1;
  int64 order_id = 2;
  int64 driver_id = 3;
  string status = 4;
}

message UpdateOrderStatusResponse {
  bool success = 1;
  string message = 2;
}

message AssignDriverRequest {
  int64 user_id = 1;
  int64 order_id = 2;
}

message AssignDriverResponse {
  int64 driver_id = 1;
  int64 order_id = 2;
  bool success = 3;
  string message = 4;

}

message GetOrderDetailsRequest {
  int64 user_id = 1;
  int64 order_id = 2;
  
}

message GetOrderItemInfoRequest {
  string product_name = 1;
}

message GetOrderItemInfoResponse {
  int64 product_id = 1;
  double price = 2;
}

message GetOrderDetailsResponse {
  Order order = 1;
}

message CompleteDeliveryRequest {
  int64 user_id = 1;
  int64 order_id = 2;
}

message CompleteDeliveryResponse {
  bool success = 1;
  int64 driver_id = 2;
  string message = 3;
}

message GetOrdersByUserRequest {
  int64 user_id = 1;
}

message GetOrdersByUserResponse {
  repeated Order orders = 1;
}

// Data structures
message Order {
  int64 id = 1;
  int64 user_id = 2;
  string delivery_address = 3;
  repeated OrderItem items = 4;
  double total_amount = 5;
  google.protobuf.Timestamp created_at = 6;
  string status = 7;
  int64 driver_id = 8;
}

message OrderItem {
  int64 order_id = 1;
  int64 product_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  double price = 5;
  double total_price = 6;
}


message GetDeliveriesByUserRequest {
  int64 user_id = 1;
}

message GetDeliveriesByUserResponse {
  repeated Order deliveries = 1;
}